--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/loja.css">
     <title>Jogo!</title>
 </head>
 <body>
@@ -16,6 +17,7 @@
         <br><br>
         <h2>Pontuação:</h2>
         <br>
+        
         <h2 id="pontuacao">0</h2>
         <h4 id="maiorPontuacao">Maior pontuacao: 0</h4>
         <div>
@@ -23,16 +25,87 @@
             <h2 id="gameOver">Fim de Jogo!</h2>
             <br>
             <div style="gap: 40px; display: flex; justify-content: center;">
-                <button class="botao" onclick="jogando = true; comecar()" >Jogar</button>
-                <button class="botao" onclick="reiniciar()">Reiniciar</button>
+               <a href="#areaDoJogo">
+                <button id="botaoJogar" class="botao" onclick="jogando = true; document.getElementsByClassName('divDificuldade')[0].style.display = 'flex'" >Jogar</button>
+               </a>
+                <button id="botaoReiniciar" class="botao" onclick="reiniciar()">Reiniciar</button>
+                <button id="botaoLoja" class="botao"
+                    onclick="document.getElementsByClassName('loja')[0].style.display = 'flex'">
+                    Loja
+                </button>
             </div>
         </div>
+
+        <!--  -->
         <div  id="areaDoJogo">
             <div id="bolinha"></div>
         </div>
+
+
+        <div class="divDificuldade">
+            <button class="botao" onclick="tempo = 2000;comecar()">
+                Fácil
+            </button>
+            <button class="botao" onclick="tempo = 1500;comecar()">
+                Médio (padrão)
+            </button>
+            <button class="botao" onclick="tempo = 1000;comecar()">
+                Difícil
+            </button>
+            <button class="botao" onclick="tempo = 750;comecar()">
+                Extremo
+            </button>
+        </div>
     </div>
 
-    <script src="script/script.js"></script>
+    <div class="loja">
+        <h1 style="text-align: end; padding-right: 100px;" onclick="document.getElementsByClassName('loja')[0].style.display = 'none'">X</h1>
 
+        <h2>Saldo: <span id="saldo">0</span></h2>
+        <table class="comprasDesignBolas">
+            <tr>
+                <th>Bolas:</th>
+            </tr>
+            <tr>
+                <td>
+                    <div id="bolaAzul"></div>
+                    <p>Azul</p>
+                    <h6>0 pontos</h6>
+                    <button class="botaoComprarBola botao comprado" onclick="corBola('rgba(0, 0, 255, 1)', 'comprarBolaAzul')" id="comprarBolaAzul">Selecionar</button>
+                </td>
+                <td>
+                    <div id="bolaAmarela"></div>
+                    <p>Amarelo</p>
+                    <h6>5 pontos</h6>
+                    <button class="botaoComprarBola botao" onclick="comprarBola('comprarBolaAmarela', 'rgb(255, 255, 0, 1)', 5)" id="comprarBolaAmarela">Comprar</button>
+                </td>
+                <td>
+                    <div id="bolaVermelha"></div>
+                    <p>Vermelho</p>
+                    <h6>5 pontos</h6>
+                    <button class="botaoComprarBola botao" onclick="comprarBola('comprarBolaVermelha', 'rgb(255, 0, 0, 1)', 5)" id="comprarBolaVermelha">Comprar</button>
+                </td>
+                <td>
+                    <div id="bolaVerde"></div>
+                    <p>Verde</p>
+                    <h6>5 pontos</h6>
+                    <button class="botaoComprarBola botao" onclick="comprarBola('comprarBolaVerde', 'rgb(40, 190, 40)', 5)" id="comprarBolaVerde">Comprar</button>
+                </td>
+            </tr>
+            <!-- <tr><th>a</th></tr>
+            <tr><th>a</th></tr>
+            <tr><th>a</th></tr> -->
+        </table>
+        <br><br>
+        <table class="comprasDesignFundo">
+            <tr>
+                <th>Fundo:</th>
+            </tr>
+        </table>
+    </div>
+    
+
+    <script src="script/script.js"></script>
+    <script src="script/loja.js"></script>
 </body>
 </html>
