--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
         <table class="comprasDesignBolas">
             <tr>
 
-                <th>Bolas:</th>
+                <th><h1>Bolas:</h1></th>
+            </tr>
+            <tr>
+                <th><h3>Cores</h3></th>
             </tr>
             <tr>
                 <td>
@@ -86,6 +89,8 @@
                     <h6>10 pontos</h6>
                     <button class="botaoComprarBola botao" onclick="comprarBola('comprarBolaVermelha', 'rgb(255, 0, 0, 1)', 10, '')" id="comprarBolaVermelha">Comprar</button>
                 </td>
+            </tr>
+            <tr>
                 <td>
                     <div id="bolaVerde"></div>
                     <p>Verde</p>
@@ -103,6 +108,83 @@
                     <p>Laranja</p>
                     <h6>15 pontos</h6>
                     <button class="botaoComprarBola botao" onclick="comprarBola('comprarBolaLaranja', 'rgb(255, 165, 0)', 15, '')" id="comprarBolaLaranja">Comprar</button>
+                </td>
+            </tr>
+            <tr>
+                <th><h3>Imagens</h3></th>
+            </tr>
+            <tr>
+                <td>
+                    <div id="bolaBaseball"></div>
+                    <p>Baseball</p>
+                    <h6>30 pontos</h6>
+                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaBaseball', '', 30, '../imagem/bola/bolaBaseball.png ')" 
+                    id="comprarBolaBaseball">
+                        Comprar
+                    </button>
+                </td>
+                <td>
+                    <div id="bolaBasquete"></div>
+                    <p>Basquete</p>
+                    <h6>30 pontos</h6>
+                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaBasquete', '', 30, '../imagem/bola/bolaBasquete.png')" 
+                    id="comprarBolaBasquete">
+                        Comprar
+                    </button>
+                </td>
+                <td>
+                    <div id="bolaBoliche"></div>
+                    <p>Boliche</p>
+                    <h6>30 pontos</h6>
+                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaBoliche', '', 30, '../imagem/bola/bolaBoliche.png')" 
+                    id="comprarBolaBoliche">
+                        Comprar
+                    </button>
+                </td>
+                <td>
+                    <div id="bolaFutebol"></div>
+                    <p>Futebol</p>
+                    <h6>30 pontos</h6>
+                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaFutebol', '', 30, '../imagem/bola/bolaFutebol.png')" 
+                    id="comprarBolaFutebol">
+                        Comprar
+                    </button>
+                </td>
+                <td>
+                    <div id="bolaGolfe"></div>
+                    <p>Golfe</p>
+                    <h6>30 pontos</h6>
+                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaGolfe', '', 30, '../imagem/bola/bolaGolfe.png')" 
+                    id="comprarBolaGolfe">
+                        Comprar
+                    </button>
+                </td>
+                <td>
+                    <div id="bolaSinuca"></div>
+                    <p>Sinuca</p>
+                    <h6>30 pontos</h6>
+                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaSinuca', '', 30, '../imagem/bola/bolaSinuca.png')" 
+                    id="comprarBolaSinuca">
+                        Comprar
+                    </button>
+                </td>
+                <td>
+                    <div id="bolaTennis"></div>
+                    <p>Tennis</p>
+                    <h6>30 pontos</h6>
+                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaTennis', '', 30, '../imagem/bola/bolaTennis.png')" 
+                    id="comprarBolaTennis">
+                        Comprar
+                    </button>
+                </td>
+                <td>
+                    <div id="bolaVolei"></div>
+                    <p>Vôlei</p>
+                    <h6>30 pontos</h6>
+                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaVolei', '', 30, '../imagem/bola/bolaVolei.png ')" 
+                    id="comprarBolaVolei">
+                        Comprar
+                    </button>
                 </td>
             </tr>
             <!-- <tr><th>a</th></tr>
