--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <div id="bolaBaseball"></div>
                     <p>Baseball</p>
                     <h6>30 pontos</h6>
-                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaBaseball', '', 30, 'imagem/bola/bolaBaseball.png ')" 
+                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaBaseball', '', 30, '../imagem/bola/bolaBaseball.png')" 
                     id="comprarBolaBaseball">
                         Comprar
                     </button>
@@ -127,7 +127,7 @@
                     <div id="bolaBasquete"></div>
                     <p>Basquete</p>
                     <h6>30 pontos</h6>
-                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaBasquete', '', 30, 'imagem/bola/bolaBasquete.png')" 
+                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaBasquete', '', 30, '../imagem/bola/bolaBasquete.png')" 
                     id="comprarBolaBasquete">
                         Comprar
                     </button>
@@ -136,7 +136,7 @@
                     <div id="bolaBoliche"></div>
                     <p>Boliche</p>
                     <h6>30 pontos</h6>
-                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaBoliche', '', 30, 'imagem/bola/bolaBoliche.png')" 
+                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaBoliche', '', 30, '../imagem/bola/bolaBoliche.png')" 
                     id="comprarBolaBoliche">
                         Comprar
                     </button>
@@ -145,7 +145,7 @@
                     <div id="bolaFutebol"></div>
                     <p>Futebol</p>
                     <h6>30 pontos</h6>
-                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaFutebol', '', 30, 'imagem/bola/bolaFutebol.png')" 
+                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaFutebol', '', 30, '../imagem/bola/bolaFutebol.png')" 
                     id="comprarBolaFutebol">
                         Comprar
                     </button>
@@ -154,7 +154,7 @@
                     <div id="bolaGolfe"></div>
                     <p>Golfe</p>
                     <h6>30 pontos</h6>
-                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaGolfe', '', 30, 'imagem/bola/bolaGolfe.png')" 
+                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaGolfe', '', 30, '../imagem/bola/bolaGolfe.png')" 
                     id="comprarBolaGolfe">
                         Comprar
                     </button>
@@ -163,7 +163,7 @@
                     <div id="bolaSinuca"></div>
                     <p>Sinuca</p>
                     <h6>30 pontos</h6>
-                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaSinuca', '', 30, 'imagem/bola/bolaSinuca.png')" 
+                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaSinuca', '', 30, '../imagem/bola/bolaSinuca.png')" 
                     id="comprarBolaSinuca">
                         Comprar
                     </button>
@@ -172,7 +172,7 @@
                     <div id="bolaTennis"></div>
                     <p>Tennis</p>
                     <h6>30 pontos</h6>
-                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaTennis', '', 30, 'imagem/bola/bolaTennis.png')" 
+                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaTennis', '', 30, '../imagem/bola/bolaTennis.png')" 
                     id="comprarBolaTennis">
                         Comprar
                     </button>
@@ -181,7 +181,7 @@
                     <div id="bolaVolei"></div>
                     <p>Vôlei</p>
                     <h6>30 pontos</h6>
-                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaVolei', '', 30, 'imagem/bola/bolaVolei.png ')" 
+                    <button class="botaoComprarBola" onclick="comprarBola('comprarBolaVolei', '', 30, '../imagem/bola/bolaVolei.png')" 
                     id="comprarBolaVolei">
                         Comprar
                     </button>
