--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <tr>
                 <th>
 
-                    <h1><strong>NÃO FUNCIONA, ESTÁ EM DESENVOLVIMENTO</strong></h1>
+<!--                     <h1><strong>NÃO FUNCIONA, ESTÁ EM DESENVOLVIMENTO</strong></h1> -->
                 </th>
             </tr>
             <!-- <tr>
@@ -268,7 +268,7 @@
                     <div id="fundoTennis">
                     </div>
                         <p>Fundo tennis</p>
-                        <h6></h6>
+                        <h6>25 pontos</h6>
                         <button id="comprarFundoTennis" class="botao" onclick="comprarFundo('comprarFundoTennis','', 25,'imagem/fundo/fundo_quadra-de-tenis.jpg')">
                             Comprar
                         </button>
