--- a/public/index.html
+++ b/public/index.html
@@ -49,23 +49,24 @@
 
         </div>
 
-
-        <div class="divDificuldade">
-            <button class="botao" id="closeDificuldade" onclick="jogando = false; document.getElementsByClassName('divDificuldade')[0].style.display = 'none'">Fechar</button>
-            <button class="botao" onclick="tempo = 2000;gerenciarTempo(tempo);comecar()">
-                Fácil
-            </button>
-            <button class="botao" onclick="tempo = 1500;gerenciarTempo(tempo);comecar()">
-                Médio
-            </button>
-            <button class="botao" onclick="tempo = 1000;gerenciarTempo(tempo);comecar()">
-                Difícil
-            </button>
-            <button class="botao" onclick="tempo = 800;gerenciarTempo(tempo);comecar()">
-                Extremo
-            </button>
-        </div>
     </div>
+
+    <div class="divDificuldade">
+        <button class="botao" id="closeDificuldade" onclick="jogando = false; document.getElementsByClassName('divDificuldade')[0].style.display = 'none'">Fechar</button>
+        <button class="botao" onclick="tempo = 2000;gerenciarTempo(tempo);comecar()">
+            Fácil
+        </button>
+        <button class="botao" onclick="tempo = 1500;gerenciarTempo(tempo);comecar()">
+            Médio
+        </button>
+        <button class="botao" onclick="tempo = 1000;gerenciarTempo(tempo);comecar()">
+            Difícil
+        </button>
+        <button class="botao" onclick="tempo = 800;gerenciarTempo(tempo);comecar()">
+            Extremo
+        </button>
+    </div>
+
 
     <div class="loja" id="loja">
         <section id="lojaHeader">
@@ -161,7 +162,7 @@
             <table>
                 <thead>
                     <td>
-                        Colocação    
+                        &nbsp;
                     </td>
                     <td>
                         Foto    
