--- a/public/index.html
+++ b/public/index.html
@@ -157,11 +157,11 @@
             <button type="submit" class="botao">Confirmar</button>
 
             <div id="containerFotos">
-                <span onclick="menosContador()">&lt;</span>
+                <button class="botao" onclick="menosContador()">&lt;</button>
                 <div class="gridPerfil"></div>
                 <div class="gridPerfil"></div>
                 <div class="gridPerfil"></div>
-                <span onclick="maisContador()">&gt;</span>
+                <button class="botao" onclick="maisContador()">&gt;</button>
             </div>
         </form>
         <p id="aviso">É necessário colocar um nome de usuário para participar do placar!</p>
